--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -3256,13 +3256,10 @@ F12 → 点击[Source] → Page → 展开[项目的js文件]
 
 #### * 查看断点
 
-```tex
-debug断点 → 展开 Call Stack
-```
-
-#### * 断点说明
-
 ```markdown
+debug断点 → 展开 Call Stack
+
+# 断点说明
 1) call stack中，最上面的为当前执行到的断点
 2) 查看上一步断点依次往下点击
 3) 若方法封装过多，会被隐藏，找不到执行的方法
