--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -258,7 +258,7 @@ git reset .
 ##### 已经 commit
 
 ```shell
-假设 GitHub提交记录如下
+# 假设 GitHub提交记录如下
 Y2024M12D26_V3		537286e
 Y2024M12D26_V2		f2929c3
 Y2024M12D26_V1		3af1d73
@@ -292,7 +292,7 @@ f2929c3 (HEAD -> master, origin/master, origin/HEAD) Y2024M12D26_V2
 3af1d73 Y2024M12D26_V1
 ```
 
-##### 回滚提交
+##### reflog
 
 ```bash
 # 找回被回滚的提交
@@ -301,11 +301,23 @@ git reflog
 bc3ca04 (HEAD -> master, origin/master) HEAD@{0}: reset: moving to bc3ca04
 bc5edcd HEAD@{1}: commit: xxx
 bc3ca04 (HEAD -> master, origin/master) HEAD@{2}: commit: yyy
-# 其中，HEAD@{1} 代表 reset 前的 commit，可以使用如下命令恢复
-git reset --hard HEAD@{1}
-# 如果要恢复到某个具体的 commit
-git reset --hard bc5edcd
+# 其中，HEAD@{1} 代表 reset 前的 commit (相对引用)
+git reset --soft HEAD@{1}
+# 或者 (绝对引用)
+git reset --soft bc5edcd
+# 效果
+将代码库从当前状态（bc3ca04/"yyy"）强制回退到前一个提交（bc5edcd/"xxx"）
 ```
+
+##### 区别
+
+| 功能         | git log --oneline         | git reflog                        |
+| ------------ | ------------------------- | --------------------------------- |
+| 显示内容     | 提交历史                  | HEAD/分支引用 的 移动历史         |
+| 范围         | 当前分支的 commit         | 本地所有操作记录                  |
+| 能否恢复     | 否（只显示存在的 commit） | 可以恢复误操作导致的提交          |
+| 是否包含操作 | 仅 commit                 | commit、reset、checkout、merge 等 |
+| 是否远程同步 | 是（提交记录本身可推送）  | 否，本地记录                      |
 
 #### * [更新分支](https://www.cnblogs.com/martinl/p/6834388.html)
 
@@ -313,13 +325,13 @@ git reset --hard bc5edcd
 # Git中从远程的分支获取最新的版本到本地有以下2个命令
 
 1) git fetch →  相当于是从远程获取最新版本到本地，不会自动merge
-git fetch origin master				[从远程的origin的master主分支下载最新的版本到origin/master分支上]
-git log -p master..origin/master	[比较本地的master分支和origin/master分支的差别]
-git merge origin/master				[进行合并]
+git fetch origin master					[从远程的origin的master主分支下载最新的版本到origin/master分支上]
+git log -p master..origin/master		 [比较本地的master分支和origin/master分支的差别]
+git merge origin/master					[进行合并]
 -- 上述过程其实可以用以下更清晰的方式来进行
-git fetch origin master:tmp			[从远程获取最新的版本到本地的tmp分支上]
-git diff tmp						[比较]
-git merge tmp						[合并]
+git fetch origin master:tmp				[从远程获取最新的版本到本地的tmp分支上]
+git diff tmp						   [比较]
+git merge tmp						   [合并]
 
 2) git pull  →  相当于是从远程获取最新版本并merge到本地
 git pull origin master
@@ -404,6 +416,8 @@ git ls-remote https://github.com/viskixin/MainDoc.git
 git config --global --unset http.proxy
 -- 单个仓库取消
 git config --unset http.proxy
+-- 注意
+实测 http、https 都走代理 → 才能顺利提交成功 → 建议两个都设置全局代理
 ```
 
 #### Access denied
