--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -3264,6 +3264,10 @@ debug断点 → 展开 Call Stack
 2) 查看上一步断点依次往下点击
 3) 若方法封装过多，会被隐藏，找不到执行的方法
    需要勾选call stack最上方的：Show ignore-listed frames，即可展示忽略的方法
+
+# 注意事项
+在 Call Stack 右击断点 再点击 Add script to ignore list 可将这个断点添加到忽略列表，从而避免在这个断点暂停或进入调试器
+按 F1 (或点击 ⚙) → 查找 Ignore list → Custom exclusion rules → 悬浮断点 → 点击 🗑(remove)
 ```
 
 #### * 查看属性
