--- a/账密文档/账户及密码.md
+++ b/账密文档/账户及密码.md
@@ -488,6 +488,8 @@ https://github.com/viskixin/MainDoc.git
 -- 应用文档 | 01_工具网站
    [常用工具.md]	→	开发工具、浏览器
    [常用网站.md]	→	开发网站、VPN
+-- 本地文件
+E:\DevFile\重要文档
 
 # 仓库2
 https://github.com/viskixin/DevSpace.git
@@ -495,6 +497,8 @@ https://github.com/viskixin/DevSpace.git
    [IdeaDaily]		→	Java日常练习
    [IdeaProjects]	→	Java项目练习
    [tuling]			→	Java项目学习
+-- 本地文件
+D:\DevSpace
 ```
 
 ## [Gitee](https://gitee.com)
