--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -324,7 +324,7 @@ git reset --soft bc5edcd
 ```markdown
 # Git中从远程的分支获取最新的版本到本地有以下2个命令
 
-1) git fetch →  相当于是从远程获取最新版本到本地，不会自动merge
+1) git fetch →  从远程获取最新版本到本地，不会自动merge
 git fetch origin master					[从远程的origin的master主分支下载最新的版本到origin/master分支上]
 git log -p master..origin/master		 [比较本地的master分支和origin/master分支的差别]
 git merge origin/master					[进行合并]
@@ -333,11 +333,53 @@ git fetch origin master:tmp				[从远程获取最新的版本到本地的tmp分
 git diff tmp						   [比较]
 git merge tmp						   [合并]
 
-2) git pull  →  相当于是从远程获取最新版本并merge到本地
+2) git pull  →  从远程获取最新版本并merge到本地
+-- 下面命令其实相当于 git fetch 和 git merge
 git pull origin master
--- 上述命令其实相当于 git fetch 和 git merge
-在实际使用中，git fetch更安全一些
-因为在merge前，我们可以查看更新情况，然后再决定是否合并结束
+-- 在实际使用中，git fetch更安全一些
+git fetch origin master
+-- 因为在merge前，可以查看更新情况，然后再决定是否合并结束
+git merge origin/master
+
+3) git pull --rebase →  从远程获取最新版本到本地，不会自动merge
+-- 下面命令其实相当于 git fetch 和 git rebase
+git pull --rebase origin master
+-- fetch → 只读，不会动本地分支；rebase → 将本地分支 rebase 到远程最新，会改写本地分支的历史
+git fetch origin master
+-- 无论本地有没有新提交，都把本地提交逐个搬到远程最新之后，历史保持一条直线
+git rebase origin master
+```
+
+| 命令                            | 是否 fetch | 是否 rebase | 是否 merge | 历史形状                          |
+| ------------------------------- | ---------- | ----------- | ---------- | --------------------------------- |
+| git fetch origin master         | ✅          | ❌           | ❌          | 远端跟踪分支更新；本地分支无变化  |
+| git pull origin master          | ✅          | ❌           | ✅          | 快进时呈直线；分叉时呈“分叉+合并” |
+| git pull --rebase origin master | ✅          | ✅           | ❌          | 几乎总是一条直线（除非冲突中断）  |
+
+```markdown
+# 提交树画
+远端 origin/master 最新有 3 个提交：A - B - C
+本地 master 分支基于 B 做了两个提交：D - E
+当前结构如下：
+远端: A - B - C (origin/master)
+本地:       \
+              D - E (master)
+
+# git pull origin master （fetch + merge）
+执行后，Git 会把 origin/master 更新到 C，然后做一次 merge commit
+结构如下：
+A - B - C --------- M (master)
+      \            /
+        D - E ---
+其中 M 是 merge 提交，记录了 [把 origin/master (C) 合并进来]
+特点：保留了分叉历史，看得出团队协作痕迹
+
+# git pull --rebase origin master （fetch + rebase）
+执行后，Git 会把本地的 D - E 重新“移动”到 C 之后，形成一条直线
+结构如下：
+A - B - C - D' - E' (master)
+其中 D' 和 E' 是 新的提交(hash 变了)，基于 C 重新生成：无冲突 → 内容和原来(D、E)相同；有冲突 → 线性修改(D' - E')内容
+特点：历史更干净，没有 merge 节点，但会改写本地提交
 ```
 
 #### * 合并分支
@@ -376,6 +418,20 @@ git push origin --delete 分支名称
 #### * 差异比较
 
 ```bash
+# 核心概念
+1) 工作区（Working Directory）
+   电脑上实际看到的项目目录（包含 .git 文件夹的目录）
+2) 暂存区（Staging Area / Index）
+   一个临时区域（位于 .git/index），用于标记下次提交的更改
+   关键命令：
+     git add <file>：将文件从工作区添加到暂存区
+     git reset <file>：将文件从暂存区移回工作区（取消暂存）
+3) 本地版本库（Local Repository）
+   Git 的本地数据库（.git 目录），存储项目的所有历史版本（提交记录）
+   关键命令：
+     git commit -m "message"：将暂存区的内容永久保存到本地版本库
+     git log：查看提交历史
+
 # 参数介绍
 git diff --cached [<path>...]		比较暂存区与最新本地版本库（本地库中最近一次commit的内容）
 git diff HEAD [<path>...]			比较工作区与最新本地版本库。如果HEAD指向的是master分支，那么HEAD还可以换成master
@@ -431,7 +487,7 @@ git config --unset http.proxy
 	   重新输入账号密码 应该就能解决了
 	2) 如果用了第一个命令，还不能解决问题；那么用这个命令：git config --global http.emptyAuth true
 	3) 如果以上两个方法不起作用，那么采用以下方法：
-	   进入控制面板→用户账户→管理你的凭据→windows凭据→普通凭据
+	   进入 控制面板 → 用户账户 → 管理你的凭据 → windows凭据 → 普通凭据
 	   在里面找到git，点击(向下的箭头图标)展开→编辑；将密码更新为最新的，之后就可以正常操作了
 ```
 
@@ -3894,7 +3950,7 @@ https://singbox-d8b.pages.dev/19154236-c58e-48ef-8827-5e5d3a6c4262
 ```markdown
 # 说明
 这是一个基于 CF Worker 平台的脚本，在原版的基础上修改了显示 VLESS 配置信息转换为订阅内容
-使用该脚本，你可以方便地将 VLESS 配置信息使用在线配置转换到 Clash 或 Singbox 等工具中
+使用该脚本，可以方便地将 VLESS 配置信息使用在线配置转换到 Clash 或 Singbox 等工具中
 
 # 注意
 "Workers"部署方式，修改完变量之，会自动重新部署
@@ -3914,7 +3970,7 @@ PROXYIP		   [IPV6地址]
 ```markdown
 # 说明
 这是一个基于 CF Worker 平台的脚本，在原版的基础上修改了显示 Trojan 配置信息转换为订阅内容
-使用该脚本，你可以方便地将 Trojan 配置信息使用在线配置转换到 Clash 或 Singbox 等工具中
+使用该脚本，可以方便地将 Trojan 配置信息使用在线配置转换到 Clash 或 Singbox 等工具中
 ```
 
 #### [include_above](https://github.com/yonggekkk/Cloudflare_vless_trojan)
