--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -151,7 +151,7 @@ git log --stat
 按：Q
 ```
 
-#### * 拉取分支
+#### * 克隆分支
 
 ```markdown
 # 不加参数，默认拉取的是master分支
@@ -322,9 +322,7 @@ git reset --soft bc5edcd
 #### * [更新分支](https://www.cnblogs.com/martinl/p/6834388.html)
 
 ```markdown
-# Git中从远程的分支获取最新的版本到本地有以下2个命令
-
-1) git fetch →  从远程获取最新版本到本地，不会自动merge
+1) git fetch →  从远程获取最新版本到本地
 git fetch origin master					[从远程的origin的master主分支下载最新的版本到origin/master分支上]
 git log -p master..origin/master		 [比较本地的master分支和origin/master分支的差别]
 git merge origin/master					[进行合并]
@@ -341,7 +339,7 @@ git fetch origin master
 -- 因为在merge前，可以查看更新情况，然后再决定是否合并结束
 git merge origin/master
 
-3) git pull --rebase →  从远程获取最新版本到本地，不会自动merge
+3) git pull --rebase →  从远程获取最新版本到本地，将本地版本线性加入后面
 -- 下面命令其实相当于 git fetch 和 git rebase
 git pull --rebase origin master
 -- fetch → 只读，不会动本地分支；rebase → 将本地分支 rebase 到远程最新，会改写本地分支的历史
@@ -350,11 +348,11 @@ git fetch origin master
 git rebase origin master
 ```
 
-| 命令                            | 是否 fetch | 是否 rebase | 是否 merge | 历史形状                          |
-| ------------------------------- | ---------- | ----------- | ---------- | --------------------------------- |
-| git fetch origin master         | ✅          | ❌           | ❌          | 远端跟踪分支更新；本地分支无变化  |
-| git pull origin master          | ✅          | ❌           | ✅          | 快进时呈直线；分叉时呈“分叉+合并” |
-| git pull --rebase origin master | ✅          | ✅           | ❌          | 几乎总是一条直线（除非冲突中断）  |
+| 命令                            | 是否 fetch | 是否 rebase | 是否 merge | 历史形状                              |
+| ------------------------------- | ---------- | ----------- | ---------- | ------------------------------------- |
+| git fetch origin master         | ✅          | ❌           | ❌          | 远端跟踪分支更新；本地分支无变化      |
+| git pull origin master          | ✅          | ❌           | ✅          | 分叉+合并（除非，本地分支已经是最新） |
+| git pull --rebase origin master | ✅          | ✅           | ❌          | 一条直线（内容冲突时，线性修改文件）  |
 
 ```markdown
 # 提交树画
@@ -371,14 +369,16 @@ git rebase origin master
 A - B - C --------- M (master)
       \            /
         D - E ---
-其中 M 是 merge 提交，记录了 [把 origin/master (C) 合并进来]
+其中 M 是 merge(与内容冲突无关，与分支变动有关) 提交，记录了 [把 origin/master (C) 合并进来]
 特点：保留了分叉历史，看得出团队协作痕迹
 
 # git pull --rebase origin master （fetch + rebase）
 执行后，Git 会把本地的 D - E 重新“移动”到 C 之后，形成一条直线
 结构如下：
 A - B - C - D' - E' (master)
-其中 D' 和 E' 是 新的提交(hash 变了)，基于 C 重新生成：无冲突 → 内容和原来(D、E)相同；有冲突 → 线性修改(D' - E')内容
+其中 D' 和 E' 是 新的提交(hash 变了)，基于 C 重新生成
+  与 C 内容 无冲突 → (D'、E')与(D、E)内容相同
+  与 C 内容 有冲突 → 线性修改(D' - E')与(D、E)内容不同
 特点：历史更干净，没有 merge 节点，但会改写本地提交
 ```
 
