--- a/应用文档/01_工具网站/常用工具.md
+++ b/应用文档/01_工具网站/常用工具.md
@@ -695,6 +695,8 @@ IDEA highlighting level → All Problems	检查所有error/warning
 
 #### * Plugins 安装
 
+##### Ai助手
+
 ```markdown
 * TONGYI Lingma					通义灵码Ai助手 (Ctrl + Shift + L)
 								https://tongyi.aliyun.com/lingma/download
@@ -702,31 +704,39 @@ IDEA highlighting level → All Problems	检查所有error/warning
 								https://comate.baidu.com/zh/download
 * Fitten Code					非十Ai助手 (Ctrl + Alt + C)
 								https://code.fittentech.com/#download
+```
 
-* Translation					翻译插件
-								打开对话框 -> [Ctrl + Shift + ,]
+##### 接口测试
 
+```markdown
 * Apipost-Helper-2.0			接口测试开发工具
 								在 File | Settings | Keymap → Plugins → Apipost-Helper-2.0
 								  [Search API]			Ctrl + Alt + ;
 								  [Search API Tree]		Ctrl + Alt + ''
 * RestfulTool					RESTful Web 服务辅助开发工具
-RestfulToolkit					(已经停止更新)
+RestfulToolkit					已经停止更新
 								https://idea.javaguide.cn/plugins/rest
+```
+
+##### 工具应用
+
+```markdown
+* Translation					翻译插件
+								打开对话框 -> [Ctrl + Shift + ,]
 
 * Rainbow Brackets				括号成对配色
 
+JPA Buddy						JPA可视化设计器和组件面板
+
+Zoolytic - Zookeeper tool		Zookeeper可视化管理插件
+```
+
+##### 编码辅助
+
+```markdown
 * Lombok						自动生成getter、setter、equals、hash等方法
 
 * JsonFormat					Json格式 快速转换为 实体类
-
-* MyBatisX						快速定位到xml文件
-								https://plugins.jetbrains.com/plugin/10119-mybatisx/versions
-MyBatisCodeHelperPro			更强大的 MyBatis 插件(收费)
-								free7d6c5721f2d14952972f1ae4e8258adb
-
-* MyBatis Log Free				SQL日志插件
-								打开方式：Tools → MyBatis Log Plugin
 
 * SumnekoLua					编辑Lua脚本
 EmmyLua
@@ -743,23 +753,23 @@ AspectJ							Java Compiler
 Alibaba Java Coding Guidelines	阿里巴巴规约(代码扫描插件)
 								File | Settings | Editor | Inspections → Ali-Check
 								搜索
-								   ThreadPoolExecutor → Severity[Warming]
-								   TimeTask → Severity[Warming]
-								   'L' instead of 'l' → Severity[Warming]
-								   '==' directly → Severity[Warming]
-								   Braces are used with if → Severity[Warming]
-								   ...
+									ThreadPoolExecutor → Severity[Warming]
+									TimeTask → Severity[Warming]
+									'L' instead of 'l' → Severity[Warming]
+									'==' directly → Severity[Warming]
+									Braces are used with if → Severity[Warming]
+									...
 
 WakaTime						时间跟踪(GitHub账号授权)
 
 Grep Console					控制台输出管理
 
 Maven Helper					Maven依赖冲突管理插件
-                                  点击 Dependency Analyze(在 pom文件 左下角 → Text右边)
+								点击 Dependency Analyze(在 pom文件 左下角 → Text右边)
 
 Maven Search					搜索Maven依赖
-                                  点击 Tools → Maven Search
-                                  或者 Ctrl + Shift + M
+								点击 Tools → Maven Search
+								或者 Ctrl + Shift + M
 
 IdeaVim							模拟vim插件
 								配置文件 → ../docs/01/Tools/.ideavimrc
@@ -772,19 +782,32 @@ EasyApi							零代码入侵，生成接口文档
 Easy Javadoc					快速生成类、方法、属性等中文注释
 								https://blog.csdn.net/ruoshuiyx/article/details/128255088
 
+JBLSpringBootAppGen				自动生成[Application启动类]和[application配置文件]
+
+theme							主题
+								Dracula Theme
+```
+
+##### Git管理
+
+```markdown
 GitToolBox						行内显示代码修改者信息
 
 Gitee							便于创建仓库
 
 .ignore							忽略不必要提交的文件
+```
 
-JPA Buddy						JPA可视化设计器和组件面板
+##### MyBatis
 
-Zoolytic - Zookeeper tool		Zookeeper可视化管理插件
+```markdown
+* MyBatisX						快速定位到xml文件
+								https://plugins.jetbrains.com/plugin/10119-mybatisx/versions
+MyBatisCodeHelperPro			更强大的 MyBatis 插件(收费)
+								free7d6c5721f2d14952972f1ae4e8258adb
 
-JBLSpringBootAppGen				自动生成[Application启动类]和[application配置文件]
-
-theme							Dracula Theme
+* MyBatis Log Free				SQL日志插件
+								打开方式：Tools → MyBatis Log Plugin
 ```
 
 #### *  [vim快捷键](../02_问题收集/日常小结.md#vim快捷键)
