--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -473,7 +473,19 @@ git config --global --unset http.proxy
 -- 单个仓库取消
 git config --unset http.proxy
 -- 注意
-实测 http、https 都走代理 → 才能顺利提交成功 → 建议两个都设置全局代理
+设置 https 代理就行，不行再设置 http
+```
+
+#### TLS connect error
+
+```markdown
+# fatal: unable to access 'https://gitee.com/...': TLS connect error: error:xxx
+-- 原因
+Git 无法与 Gitee 建立安全 TLS 连接
+-- 解决方案 → 临时关闭代理
+git config --global --unset http.proxy
+-- 注意
+关闭 http 即可
 ```
 
 #### Access denied
