--- a/应用文档/02_问题收集/日常小结.md
+++ b/应用文档/02_问题收集/日常小结.md
@@ -6442,13 +6442,32 @@ netsh winsock reset
 ## 文件垃圾
 
 ```markdown
+# C盘清理
+[Win + I] → 系统 → 临时文件 → 删除文件
+右击[本地磁盘(C)] → 点击[属性] → 详细信息 → 临时文件 → 删除文件
+
+# 系统[更新文件]
+[Win + R] → 输入[cleanmgr]
+                           → 选择系统盘(C) → 确定
+                           → 点击[清理系统文件] → 选择(C)盘 → 确定
+                             [√] Windows 更新清理
+                             [√] 传递优化文件(可选)
+                             [√] 以前的Windows安装文件(升级过系统才显示，可选)
+                           → 确定 → 删除文件
+删除缓存文件(这些是已下载但未安装的更新包)
+C:\Windows\SoftwareDistribution\Download
+# 检查当前系统版本，确认无异常
+[Win + R] → 输入[winver]
+
 # 系统[临时文件]
 %temp%
 
-# NVIDIA
--- 删除里面的所有子文件夹和 .exe 安装文件
+# NVIDIA Corporation
+-- 已完成的更新文件(方便回滚或再次安装) → 可删除全部
+C:\ProgramData\NVIDIA Corporation\NVIDIA App\UpdateFramework\ota-artifacts
+-- 驱动、GeForce Experience、NVIDIA App 的完整安装包 → 可删除全部
 C:\ProgramData\NVIDIA Corporation\Downloader
--- 只保留最新时间的文件夹，其他删除
+-- 每次安装时解压出来的驱动/组件缓存(用于 回滚 或 修复) → 只保留最新时间的文件夹，其他删除
 C:\Program Files\NVIDIA Corporation\Installer2
 ```
 
