--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -4121,22 +4121,22 @@ v2rayN-windows-64-SelfContained.zip
 # 无法科学上网
 -- Windows
 设置 → 参数设置 → Core: 基础设置 → 开启流量探测(不推荐打开)
-                             → 允许来自局域网的连接[√]
-                             → 开启Mux多路复用(不推荐打开)
-                             → 启用分片 (Fragment)[√] 使用Xray且非Tun模式启用，和分组前置代理冲突
+                               → 允许来自局域网的连接[√]
+                               → 开启Mux多路复用(不推荐打开)
+                               → 启用分片 (Fragment)[√] 使用Xray且非Tun模式启用，和分组前置代理冲突
 -- Android
 设置 → 分片 (Fragment) 设置 → 启用分片 (Fragment)
     → 启动本地DNS、启动虚拟DNS
 
 # 其他设置说明(Win)
 设置 → 参数设置 → v2rayN 设置 → 开机启动
-                           → 启用流量统计
-                           → 显示实时速度
-                           → 启动后隐藏窗口
-                           → 测速文件地址(网速不通时，可更换)
-                           → 真连接测试地址(真实连接-1时，可更换)
-              → Tun模式设置 (局域网连接时设置，不推荐) → Stack [gvisor]
-              → Core类型设置 → Shadowsocks[sing_box] → VLESS[Xray] → Trojan[Xray]
+                            → 启用流量统计
+                            → 显示实时速度
+                            → 启动后隐藏窗口
+                            → 测速文件地址(网速不通时，可更换)
+                            → 真连接测试地址(真实连接-1时，可更换)
+               → Tun模式设置 (局域网连接时设置，不推荐) → Stack [gvisor]
+               → Core类型设置 → Shadowsocks[sing_box] → VLESS[Xray] → Trojan[Xray]
 设置 → 路由设置 → 域名解析策略(默认 Asls) [IPOnDemand] → 域名匹配算法(默认 空) [mph]
     → 绕过大陆 (访问国内网站，仍然是内地IP)
       [√] Google cn
@@ -4150,6 +4150,8 @@ v2rayN-windows-64-SelfContained.zip
 
 ### 订阅链接
 
+#### Node
+
 ```bash
 # 注意
 所有Cloudflare项目 都转移到了 linhanxavi@gmail.com
@@ -4160,47 +4162,105 @@ https://6kp.viskx.dynv6.net/bestip/5ef1ef0f-fec5-4881-a7c9-b918339391ac
 
 # Author(cmliu)		DNS(US.KG)				Email(linhanxavi@gmail.com)
 -- cml_vs
-https://cmv.weskx.dpdns.org/cmlgh?proxyip=ProxyIP.Oracle.CMLiussss.net
+https://cmv.weskx.dpdns.org/cmlgh?proxyip=ProxyIP.SE.CMLiussss.net
 -- cml_tj
-https://cmt.wesky.dpdns.org/cmlep?proxyip=ProxyIP.Vultr.CMLiussss.net
+https://cmt.wesky.dpdns.org/cmlep?proxyip=ProxyIP.FI.CMLiussss.net
+
+# By Author(cmliu)
+-- Cmliu_Vless
+https://cmv.weskx.dpdns.org/cmlgh?sub=SUB.CMLiussss.net&proxyip=ProxyIP.NL.CMLiussss.net
+-- 天诚_Trojan
+https://altrojan.sosorg.nyc.mn/sub?host=cmt.wesky.dpdns.org&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.GB.CMLiussss.net
+-- Moist_Vless
+https://cmv.weskx.dpdns.org/cmlgh?sub=owo.o00o.ooo&proxyip=kr.tp50000.netlib.re
+-- Moist_Trojan
+https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=tw.tp81.netlib.re
+-- sos_cml_vls
+https://SOS.CMLiussss.net/auto
+
+# Author(amclubs)	DNS(US.KG)				Email(linhanxavi@gmail.com)
+https://am.weski.dpdns.org/f2cb473a-894a-4400-8a20-beb01ae43234?sub
 
 # Author(ygkkk)		DNS(US.KG & DynV6)		Email(linhanxavi@gmail.com)
 https://ygv.weski.dpdns.org/e87be5d7-a582-440f-a8ff-f4c93a2d2bcb/pty
 https://ygt.viskx.dynv6.net/qwe1234/pty
 
-# By Author(cmliu)
--- Cmliu_Vless
-https://cmv.weskx.dpdns.org/cmlgh?sub=SUB.CMLiussss.net&proxyip=ProxyIP.Multacom.CMLiussss.net
--- 天诚_Trojan
-https://altrojan.sosorg.nyc.mn/sub?host=cmt.wesky.dpdns.org&password=cmlep&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.DigitalOcean.CMLiussss.net
--- Moist_Vless
-https://cmv.weskx.dpdns.org/cmlgh?sub=owo.o00o.ooo&proxyip=ProxyIP.KR.CMLiussss.net
--- Moist_Trojan
-https://cmt.wesky.dpdns.org/cmlep?sub=owo.o00o.ooo&proxyip=ProxyIP.SG.CMLiussss.net
--- sos_cml_vls
-https://SOS.CMLiussss.net/auto
-
 # 基于以上三种都可以生成订阅(以 ygkkk、cmliu 为例)
 -- LC_YG_VS
 https://opv.sosorg.dpdns.org/sub?uuid=e87be5d7-a582-440f-a8ff-f4c93a2d2bcb&encryption=none&security=tls&sni=ygv.weski.dpdns.org&fp=randomized&type=ws&host=ygv.weski.dpdns.org&path=%2F%3Fed%3D2560
 -- LC_CM_TJ
-https://opt.sosorg.dpdns.org/sub?password=cmlep&security=tls&sni=cmt.wesky.dpdns.org&fp=randomized&type=ws&host=cmt.wesky.dpdns.org&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.KR.CMLiussss.net
+https://opt.sosorg.dpdns.org/sub?password=cmlep&security=tls&sni=cmt.wesky.dpdns.org&fp=randomized&type=ws&host=cmt.wesky.dpdns.org&path=%2F%3Fed%3D2560%26proxyip%3DProxyIP.US.CMLiussss.net
+```
 
-# 通用DNS
-ts.hpc.tw
+#### SUB
+
+```markdown
+# CM
+sub.cmliussss.net
+# Moist_R
+owo.o00o.ooo
+# 周润发
+zrf.zrf.me
+# 文烨
+sub.keaeye.icu
+# Kristi
+sub.mot.cloudns.biz
+# 青云志
+dy.yomoh.ggff.net
+# 辣子鸡
+sub.lzjbaby.com
+# Kyrie Irving(DanFeng)
+sub.443888.xyz
+```
+
+#### [ROXYIP](https://check.proxyip.cmliussss.net)
+
+```markdown
+# CM
+-- 区域：美国 维护频率：12小时/次
+ProxyIP.US.CMLiussss.net
+-- 区域：新加坡 维护频率：12小时/次
+ProxyIP.SG.CMLiussss.net
+-- 区域：香港 维护频率：随缘
+ProxyIP.HK.CMLiussss.net
+-- 区域：日本 维护频率：12小时/次
+ProxyIP.JP.CMLiussss.net
+-- 区域：韩国 维护频率：12小时/次
+ProxyIP.KR.CMLiussss.net
+-- 区域：瑞典 维护频率：12小时/次
+ProxyIP.SE.CMLiussss.net
+-- 区域：荷兰 维护频率：12小时/次
+ProxyIP.NL.CMLiussss.net
+-- 区域：芬兰 维护频率：12小时/次
+ProxyIP.FI.CMLiussss.net
+-- 区域：英国 维护频率：12小时/次
+ProxyIP.GB.CMLiussss.net
+-- 区域：甲骨文 维护频率：4小时/次
+ProxyIP.Oracle.cmliussss.net
+-- 区域：数码海 维护频率：4小时/次
+ProxyIP.DigitalOcean.CMLiussss.net
+-- 区域：Vultr 维护频率：4小时/次
+ProxyIP.Vultr.CMLiussss.net
+-- 区域：Multacom 维护频率：4小时/次
+ProxyIP.Multacom.CMLiussss.net
+
+# 第三方
+tw.tp81.netlib.re
 kr.tp50000.netlib.re
-proxyip.tp27231.hbmc.net
 hk.cf.zhetengsha.eu.org
-# 特定DNS
+
+# 已挂
 -- ygkkk
 s14.serv00.com:15661
--- cmliu
-ProxyIP.JP.CMLiussss.net | ProxyIP.US.CMLiussss.net | ...
+-- 第三方
+ts.hpc.tw
 tw.yutian.nyc.mn
-# 已挂
--- cmliu
-ProxyIP.HK.CMLiussss.net
+proxyip.tp27231.hbmc.net
+```
 
+#### Airport
+
+```bash
 # 69云机场
 https://checkhere.top/link/I0CkVOowq1gZi7Dh?sub=3
 
@@ -4261,7 +4321,7 @@ Hiddify-Windows-Setup-x64.exe
 
 # DNS
 
-## 【[ClouDNS](https://www.cloudns.net/)】
+## 【[ClouDNS](https://www.cloudns.net)】
 
 [注册教程](https://kjgx668.blogspot.com/2023/12/cloudflare.html)
 
@@ -4289,6 +4349,7 @@ weski.ip-ddns.com
 密码：what.0414
 # 域名
 viski.dpdns.org
+viski.qzz.io
 
 # 账号密码2
 邮箱：linhanxavi@gmail.com
@@ -4299,7 +4360,7 @@ weskx.dpdns.org
 wesky.dpdns.org
 ```
 
-## 【[dynv6](https://dynv6.com/)】
+## 【[dynv6](https://dynv6.com)】
 
 [注册教程1](#搭建Pages)  |  [注册教程2](https://www.youtube.com/watch?v=59THrmJhmAw)  |  [注册教程3](https://www.youtube.com/watch?v=CRVKvWw9SLk)
 
@@ -4314,7 +4375,7 @@ wk.viski.dynv6.net
 邮箱：outtaame@proton.me
 密码：what.0414
 # 域名
-dv.weiskey.dynv6.net
+dv.weski.dynv6.net
 
 # 账号密码3
 邮箱：linhanxavi@gmail.com
@@ -4322,6 +4383,22 @@ dv.weiskey.dynv6.net
 # 域名
 6kp.viskx.dynv6.net
 ygt.viskx.dynv6.net
+```
+
+# Hosted
+
+[注册教程](https://www.youtube.com/watch?v=QwdZFrvfBN8)
+
+## 【HOSTRY】
+
+```markdown
+https://hostry.com
+```
+
+## 【HENet】
+
+```markdown
+https://he.net
 ```
 
 # VPS
