--- a/应用文档/01_工具网站/常用网站.md
+++ b/应用文档/01_工具网站/常用网站.md
@@ -15,7 +15,7 @@ https://registry.npmmirror.com/binary.html?path=git-for-windows
 
 ### # [环境配置](https://blog.csdn.net/shuang_waiwai/article/details/121108964)
 
-前提：打开 Git Bash
+#### * Git Bash
 
 ```markdown
 # 配置[用户]和[邮箱]
@@ -57,7 +57,7 @@ ssh -T git@github.com
 yes
 ```
 
-配置信息
+#### * 配置信息
 
 ```markdown
 # 查看本地配置
@@ -77,34 +77,60 @@ git config user.password
 
 以 [本地项目上传到Github](https://blog.csdn.net/zjq1042970687/article/details/106534710) 为例
 
+#### * 方式1
+
 ```markdown
-# 方式1
-1) In Github [Create a new repository]	假设[Repository name]为[ghtest]
-2) git clone https://.../ghtest.git     克隆[远程仓库]到[本地文件夹]
-3) cd ghtest							进入需要上传的文件夹
-4) git add .							别忘记后面的. → 此操作是把[ghtest目录下]的[所有文件]都[添加进来]
-5) git commit -m "commit info"			版本跟踪成功之后，可用 -am 参数
-6) git push -u origin main				把[本地仓库]推送到[github]的[main分支]，首次需要输入帐号和密码
+1) 假设[Repository name]为[demogh]
+   在 Github [Create a new repository]
+2) 进入需要上传的文件夹 → 创建[.gitignore]文件
+   cd demogh → touch .gitignore
+3) 把[demogh]变成[Git可管理的仓库]
+   git init
+4) 把[demogh目录下]的[所有文件]都[添加到仓库]
+   git add .
+5) 把[项目]提交到[仓库]
+   git commit -m "first commit"
+6) [Git仓库]关联[本地仓库]
+   git remote add origin https://.../demogh.git
+7) 指定[主分支]为[master] → 也可省略，直接执行步骤8
+   git branch -M master
+8) 把[本地库]的[所有内容]推送到[远程仓库] → 等远程仓库里面有了内容之后，可以不加-u这个参数
+   git push -u origin master
+```
 
-# 方式2
-1) In Github [Create a new repository]				假设[Repository name]为[demogh]
-2) cd demogh										进入需要上传的文件夹
-3) git init											把[demogh]变成[Git可管理的仓库]
-4) git add .										把[demogh目录下]的[所有文件]都[添加到仓库]
-5) git commit -m "first commit"						把[项目]提交到[仓库]
-6) git remote add origin https://.../demogh.git		[Git仓库]关联[本地仓库]
-7) git branch -m master								指定[主分支]为[master] → 也可省略，直接执行步骤8
-8) git push -u origin master						把[本地库]的[所有内容]推送到[远程仓库]
-   -- 远程仓库是空的，所以要加上-u这个参数，等远程仓库里面有了内容之后，可直接如下执行
-      git push origin master
-   -- 若出现 error: failed to push some refs to ...，可以通过以下命令先将内容合并
-      git pull --rebase origin master
+#### * 方式2
 
-# Github[默认分支名]为[main]，修改步骤
-Settings | Code, planning, and automation → Repositories | Repository default branch → Update
+```markdown
+1) 假设[Repository name]为[ghtest]
+   在 Github [Create a new repository]
+2) 克隆[远程仓库]到[本地文件夹]
+   git clone https://.../ghtest.git
+3) 进入需要上传的文件夹 → 创建[.gitignore]文件
+   cd ghtest → touch .gitignore
+4) 别忘记后面的. → 此操作是把[ghtest目录下]的[所有文件]都[添加进来]
+   git add .
+5) 版本跟踪成功之后，可用 -am 参数
+   git commit -m "commit info"
+6) 把[本地仓库]推送到[github]的[main分支]，首次需要输入帐号和密码
+   git push -u origin main
+```
 
-# 若出现 fatal: unable to access . failure: Connection 等
-网络原因，重新推送即可
+#### * 注意
+
+```markdown
+# 不加参数，默认拉取的是master分支
+git clone 项目地址
+git clone 项目地址 文件路径( ./ 表示[当前路径]    ../ 表示[上级路径])
+
+# 拉取指定分支代码，加参数 -b 分支
+git clone -b 分支名称 项目地址
+
+# Github(2020年开始)[默认分支名]为[main] → 修改步骤：
+Settings | Code, planning, and automation | Repositories | Repository default branch → 输入[master] → Update
+
+# 重命名分支
+git checkout master
+git branch -M master main
 ```
 
 ### # 分支操作
@@ -149,17 +175,6 @@ $ git status -s
 git log --stat
 # 退出查看
 按：Q
-```
-
-#### * 克隆分支
-
-```markdown
-# 不加参数，默认拉取的是master分支
-git clone 项目地址
-git clone 项目地址 文件路径( ./ 表示[当前路径]    ../ 表示[上级路径])
-
-# 拉取指定分支代码，加参数 -b 分支
-git clone -b 分支名称 项目地址
 ```
 
 #### * 新建分支
@@ -456,22 +471,28 @@ git config --global credential.helper store
 #### Failed to connect
 
 ```bash
+# 测试 http 代理
+curl -x http://127.0.0.1:7890 https://www.google.com -k -v
+# 测试 socks5 代理
+curl -x socks5h://127.0.0.1:7891 https://www.google.com -k -v
+# Git 用 OpenSSL 而不是 SChannel
+git config --global http.sslBackend openssl
+git config --global --unset http.sslBackend
+
 # Failed to connect to github.com port 443 after xxxxx ms: Could not connect to server
 -- 原因
 HTTPS 请求走了 VPN，Git 命令行的 HTTPS 请求没走代理，所以直连 443，结果被墙
--- 解决方案1 → 设置全局代理
+-- 解决方案1 → 设置全局代理(http) → 不加 --global，只对当前仓库生效
 git config --global http.proxy http://127.0.0.1:7890
 git config --global https.proxy http://127.0.0.1:7890
--- 解决方案2 → 不加 --global，只对当前仓库生效
-git config http.proxy http://127.0.0.1:7890
-git config https.proxy http://127.0.0.1:7890
+-- 解决方案2 → 设置全局代理(socks5) → 不加 --global，只对当前仓库生效
+git config --global http.proxy socks5h://127.0.0.1:7891
+git config --global https.proxy socks5h://127.0.0.1:7891
 -- 验证是否生效
 git config --global --get https.proxy
-git ls-remote https://github.com/viskixin/MainDoc.git
--- 全局取消
+git ls-remote https://github.com/viskixin/xxx.git
+-- 全局取消 → 不加 --global，单个仓库取消
 git config --global --unset http.proxy
--- 单个仓库取消
-git config --unset http.proxy
 -- 注意
 设置 https 代理就行，不行再设置 http
 ```
@@ -495,12 +516,12 @@ git config --global --unset http.proxy
 -- 原因
 本地git配置的用户名、密码与gitlabs上注册的用户名、密码不一致
 -- 解决方案
-	1) 如果账号密码有变动，用这个命令：git config --system --unset credential.helper
-	   重新输入账号密码 应该就能解决了
-	2) 如果用了第一个命令，还不能解决问题；那么用这个命令：git config --global http.emptyAuth true
-	3) 如果以上两个方法不起作用，那么采用以下方法：
-	   进入 控制面板 → 用户账户 → 管理你的凭据 → windows凭据 → 普通凭据
-	   在里面找到git，点击(向下的箭头图标)展开→编辑；将密码更新为最新的，之后就可以正常操作了
+   1) 如果账号密码有变动，用这个命令：git config --system --unset credential.helper
+      重新输入账号密码 应该就能解决了
+   2) 如果用了第一个命令，还不能解决问题；那么用这个命令：git config --global http.emptyAuth true
+   3) 如果以上两个方法不起作用，那么采用以下方法：
+      进入 控制面板 → 用户账户 → 管理你的凭据 → windows凭据 → 普通凭据
+      在里面找到git，点击(向下的箭头图标)展开→编辑；将密码更新为最新的，之后就可以正常操作了
 ```
 
 #### is owned by
